# c-project_demo

./: CMakeLists.txt  Graphical_UI.cpp  Histogram_Filter.cpp  Image_preprocess_segmentation.cpp  KMeanPoints.cpp  README.md  main.cpp  realsense_video.cpp  video.cpp
utils/: MultipleImageWindow.cpp  MultipleImageWindow.h
